@@ -41,6 +41,7 @@ QL_TESTS = \
 	swap.hpp swap.cpp \
 	swaption.hpp swaption.cpp \
 	termstructures.hpp termstructures.cpp \
+	tracing.hpp tracing.cpp \
 	old_pricers.hpp old_pricers.cpp \
 	utilities.hpp utilities.cpp
 
